tests: refresh coverage for new flows
Adjust tests for new booking queries and remove stale accountId usage.